changed blog truncate library, fixed toggle btn texts, added no match component

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 @import url('https://fonts.googleapis.com/css?family=Comfortaa');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 @import './nav.css';
 @import './blog.css';
 @import './form.css';
@@ -44,4 +45,18 @@ hr {
     border: 0;
     background: black;
     background: -webkit-gradient(linear, 0 0, 100% 0, from(#fff), to(#fff), color-stop(50%, #00181D));
+}
+
+.no-match {
+  padding-top: 35px;
+  text-align: center;
+  background-color: #ffffff;
+  width: 85%;
+  box-shadow: 12px 0 15px -4px rgba(0, 0, 0, 0.25), -12px 0 15px -4px rgba(0, 0, 0, 0.25);
+  height: 35vh;
+  font-family: 'Raleway', sans-serif;
+  line-height: 2;
+}
+.no-match a {
+  text-decoration: none;
 }
